engauge-digitizer (10.4+ds.1-2) unstable; urgency=medium

  [ Helmut Grohne ]
  * Fix FTCBFS: Let dh_auto_configure pass cross flags to qmake.
    (Closes: #889801)

  [Tobias Winchen]
  * Update to ch compat 10

 -- Tobias Winchen <tobias@winchen.de>  Mon, 12 Feb 2018 17:25:24 +0100

engauge-digitizer (10.4+ds.1-1) unstable; urgency=medium

  * New upstream release
  * Updated to standards version 4.1.1
  * Patch to build correctly on hurd and kfreebsd included upstream
  * Fixed spelling error in changelog

 -- Tobias Winchen <tobias@winchen.de>  Wed, 11 Oct 2017 17:35:01 +0200

engauge-digitizer (10.3+ds.1-3) unstable; urgency=medium

  * Automated include location for openjpeg (Closes: #876810)

 -- Tobias Winchen <tobias@winchen.de>  Sun, 01 Oct 2017 20:38:24 +0200

engauge-digitizer (10.3+ds.1-2) unstable; urgency=medium

  * Updated to standards version 4.1.0
  * Added patch to build correctly on hurd and kfreebsd

 -- Tobias Winchen <tobias@winchen.de>  Sat, 02 Sep 2017 11:45:36 +0200

engauge-digitizer (10.3+ds.1-1) unstable; urgency=medium

  * New upstream release
  * Updated to standards version 4.0.0
  * engauge-digitizer-doc as Multi-Arch: foreign

 -- Tobias Winchen <tobias@winchen.de>  Thu, 31 Aug 2017 20:35:40 +0200

engauge-digitizer (9.7+ds.1-1) unstable; urgency=medium

  * New upstream release
  * Repacked upstream archive to remove unneeded binary files

 -- Tobias Winchen <tobias@winchen.de>  Wed, 07 Dec 2016 21:18:35 +0100

engauge-digitizer (9.3-1) unstable; urgency=medium

  * New upstream release

 -- Tobias Winchen <tobias@winchen.de>  Mon, 12 Sep 2016 18:49:21 +0200

engauge-digitizer (9.1-1) unstable; urgency=medium

  * New upstream release
  * Added hardening=+all
  * Use secure uri for vcs-field

 -- Tobias Winchen <tobias@winchen.de>  Thu, 21 Jul 2016 10:21:27 +0200

engauge-digitizer (8.3-1) unstable; urgency=medium

  * New upstream release
    - New grid line removal dialog (Closes: #426421)